# rocguard

./: .dockerignore  .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile.hold-gpu  Dockerfile.web  INSTALL-NO-TLS.md  INSTALL-TLS.md  README.md  User-Guide.md  compose.web-dev.yml  compose.web.yml  go.mod
cmd/gpuardian/: main.go  main_test.go
cmd/rocguard/: main.go  main_test.go
docs/: NO-TLS-INSTALL.md
internal/amdsmi/: amdsmi.go  amdsmi_test.go
internal/config/: config.go  config_test.go
internal/daemon/: http.go  ps_sample.go  request_args.go  request_args_test.go  server.go  server_test.go  snapshot.go  snapshot_test.go  telemetry.go
internal/enforce/: enforce.go  enforce_test.go
internal/history/: history_test.go  ingest.go  migrations.go  query.go  search.go  search_test.go  store.go  types.go
internal/model/: model.go
internal/netlimit/: listener.go  listener_test.go
internal/proc/: proc.go  proc_test.go
internal/protocol/: protocol.go
internal/runtime/: runtime.go  runtime_test.go
internal/store/: store.go  store_test.go
internal/telemetry/: telemetry.go
internal/web/: authz_test.go  client.go  client_test.go  history_collector.go  history_handlers.go  history_handlers_test.go  managed_key_sync.go  registry.go  registry_test.go  secret.go  secret_test.go  server.go  server_test.go  session.go  users.go  (+4 more)
mcp/: README.md  pyproject.toml
mcp/gpuardian_mcp/: __init__.py  __main__.py  client.py  server.py
mcp/rocguard_mcp/: __init__.py  __main__.py  client.py  server.py
scripts/: hold_gpu.py  integration_test.py  spawn_gpu_children.py
(+22 files in other folders)
