[project]
name = "rocguard-mcp"
version = "0.1.0"
description = "MCP server exposing RocGuard GPU reservation operations"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
rocguard-mcp = "rocguard_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rocguard_mcp"]
