[project]
name = "gpuardian-mcp"
version = "0.1.0"
description = "MCP server exposing Gpuardian GPU reservation operations"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
gpuardian-mcp = "gpuardian_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpuardian_mcp"]
